--- a/objects/_flag.scss
+++ b/objects/_flag.scss
@@ -1,8 +1,8 @@
-/* 
-------------------------------------------------
-FLAG (@csswizardry)
-------------------------------------------------
-*/
+
+/// ------------------------------------------------
+/// FLAG (@csswizardry)
+/// ------------------------------------------------
+
 
 .flag {
     display: table;
