--- a/objects/_grid.scss
+++ b/objects/_grid.scss
@@ -1,8 +1,7 @@
-/* 
-------------------------------------------------
-GRIDS
-------------------------------------------------
-*/
+
+/// ------------------------------------------------
+/// GRIDS
+///------------------------------------------------
 
 @function fill-span($span) {
   $result: ();
