--- a/objects/_loader.scss
+++ b/objects/_loader.scss
@@ -1,8 +1,6 @@
-/* 
-------------------------------------------------
-LOADER
-------------------------------------------------
-*/
+/// ------------------------------------------------
+/// LOADER
+/// ------------------------------------------------
 
 @if $use-loader {
 	@include keyframes(loader-animation-left) {
