--- a/objects/_media.scss
+++ b/objects/_media.scss
@@ -1,8 +1,6 @@
-/* 
-------------------------------------------------
-MEDIA (@stubbornella)
-------------------------------------------------
-*/
+/// ------------------------------------------------
+/// MEDIA (@stubbornella)
+/// ------------------------------------------------
 
 .media { 
 	@include clearfix;
