--- a/objects/_tabdata.scss
+++ b/objects/_tabdata.scss
@@ -1,8 +1,7 @@
-/* 
-------------------------------------------------
-TABDATA
-------------------------------------------------
-*/
+/// ------------------------------------------------
+/// TABDATA
+/// ------------------------------------------------
+
 @if $use-tabdata {
 	.tabdata {
 		&__group {
