--- a/utils/_graph.scss
+++ b/utils/_graph.scss
@@ -1,9 +1,16 @@
-/* 
-------------------------------------------------
-GRAPH UTILITIES
-------------------------------------------------
-*/
+////
+/// Graphic utils
+/// @author Nicemondays
+/// @since version 0.1
+////
 
+/// Pinta un triangulo a través del calculo de bordes
+/// @parameter {number} $width
+/// @parameter {number} $height
+/// @parameter {string} $direction
+/// @parameter {color} $color
+/// @example
+///   @include triangle(25px, 10px, down, blue);
 @mixin triangle($width: 20px, $height: 20px, $direction: up, $color: red) {
   width: 0;
   height: 0;
@@ -37,7 +44,14 @@ GRAPH UTILITIES
   }
 }
 
-@mixin circle($size, $bgcolor) {
+/// Pinta un circulo usando un border-radius del 50%
+/// @parameter {number} $width
+/// @parameter {number} $height
+/// @parameter {string} $direction
+/// @parameter {color} $color
+/// @example
+///   @include triangle(25px, 10px, down, blue);
+@mixin circle($size, $bgcolor: transparent) {
   display: inline-block;
   width: $size;
   height: $size;
@@ -45,7 +59,10 @@ GRAPH UTILITIES
   background-color: $bgcolor;
 }
 
-// Example: .box { @include inside-border(20px, blue, .6); }
+/// Mixin que crea un borde interior en el elemento. Se usa una sombra inset solida
+/// @parameter {arglist} $values
+/// @example
+///   @include inside-border(20px, blue, .6);
 @mixin inside-border($values...) {
   $borderThickness: 2px !default;
   $borderColor: black !default;
@@ -66,8 +83,14 @@ GRAPH UTILITIES
   box-shadow: inset 0 0 0 $borderThickness rgba($borderColor, $borderAlpha);
 }
 
-// Author: gillesbertaux
 
+/// Genera un fondo gradiente
+/// @parameter {color} $startcolor
+/// @parameter {color} $endcolor
+/// @parameter {string} $orientation
+/// @example
+///   @include background-gradient(red, blue, radial);
+/// @author: gillesbertaux
 @mixin background-gradient($startcolor, $endcolor, $orientation) {
     background: $startcolor;
     @if $orientation == vertical {
@@ -102,4 +125,12 @@ GRAPH UTILITIES
       background: radial-gradient(ellipse at center,  $startcolor 0%,$endcolor 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$startcolor', endColorstr='$endcolor',GradientType=1 );
     }
+}
+/// Generate a box emboss effect
+/// @parameter {number} $opacity - Strength of light color
+/// @parameter {number} $opacity2 - Strength of dark color
+/// @example
+///   @include box-emboss(0.5, 1);
+@mixin box-emboss($opacity, $opacity2){
+    box-shadow:white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
 }
