--- a/utils/_utilities.scss
+++ b/utils/_utilities.scss
@@ -68,7 +68,7 @@
 /// @parameter {string} $selector - Selector of parent element
 /// @example
 ///   .element {
-///     @include when-inside(.active){
+///     @include when-inside('.active'){
 ///       display: none;
 ///     }
 ///   }
@@ -76,6 +76,22 @@
 /// @link <http://sass-guidelin.es/>
 @mixin when-inside($selector) {
   #{$selector} & {
+    @content;
+  }
+}
+
+
+/// Este mixin es un wrapper que sirve para definir nuevas propiedades
+/// que se harán activas si este elemento cumple además otro selector
+/// @parameter {string} $selector - Selector de la condición
+/// @example
+///   .element {
+///     @include when-is('a'){
+///       text-decoration: none;
+///     }
+///   }
+@mixin when-is($selector) {
+  @at-root #{$selector}#{&} {
     @content;
   }
 }
