Update flexbox import

--- a/nicecss.scss
+++ b/nicecss.scss
@@ -9,7 +9,7 @@
 @import "defaults";
 
 @import 'breakpoint-sass/stylesheets/breakpoint';
-@import 'sass-flex-mixin/flex';
+@import 'sass-flex-mixin/flexbox';
 
 @import "utils/crossbrowser";
 @import "utils/fonts";
