--- a/nicecss.scss
+++ b/nicecss.scss
@@ -3,13 +3,12 @@
 /// nicecss.scss
 /// 
 
+@import 'sass-flex-mixin/flex';
+
 @import "functions/utils";
 @import "functions/metrics";
 
 @import "defaults";
-
-@import 'breakpoint-sass/stylesheets/breakpoint';
-@import 'sass-flex-mixin/flexbox';
 
 @import "utils/crossbrowser";
 @import "utils/fonts";
