--- a/objects/_loader.scss
+++ b/objects/_loader.scss
@@ -4,23 +4,23 @@
 
 @if $use-loader {
 	@include keyframes(loader-animation-left) {
-		0%,50%,60% { @include vendor(transform, translateX(0)); }
-		25% { @include vendor(transform, translateX(-(map-get($loader, animation-move)))); }
-		55% { @include vendor(transform, translateX(-3px));}
+		0%,50%,60% { transform: translateX(0); }
+		25% { transform: translateX(-(map-get($loader, animation-move))); }
+		55% { transform: translateX(-3px);}
 
 	}
 	@include keyframes(loader-animation-right) {
-		5% { @include vendor(transform, translateX(3px));}
-		10%, 50%,100% { @include vendor(transform, translateX(0)); }
-		75% { @include vendor(transform, translateX(map-get($loader, animation-move))); }
+		5% { transform: translateX(3px);}
+		10%, 50%,100% { transform: translateX(0); }
+		75% { transform: translateX(map-get($loader, animation-move)); }
 	}
 	.niceloader {
 		@if map-get($loader, iscenter) {
 			position: absolute;
 			top: 50%;
 			left: 50%;
-			@include vendor(transform, translateX(-50%));
-			@include vendor(transform, translateY(-50%));
+			transform: translateX(-50%);
+			transform: translateY(-50%);
 		}
 
 		&:before,
@@ -29,15 +29,15 @@
 			display: inline-block;
 			width: map-get($loader, dotsize);
 			height: map-get($loader, dotsize);
-			@include border-radius(50%);
+			border-radius: 50%;
 			background-color: map-get($loader, dotcolor);
-			@include animation(map-get($loader, animation-duration) infinite ease-in);
+			animation: map-get($loader, animation-duration) infinite ease-in;
 		}
 		&:before {
-			@include vendor(animation-name, loader-animation-left);
+			animation-name: loader-animation-left;
 		}
 		&:after {
-			@include vendor(animation-name, loader-animation-right);
+			animation-name: loader-animation-right;
 		}
 	}
 }
