Added woff2 import to font-face mixin

--- a/utils/_fonts.scss
+++ b/utils/_fonts.scss
@@ -37,6 +37,7 @@
     src: font('#{$file-name}.eot');
     src: font('#{$file-name}.eot?#iefix')               format('embedded-opentype'),
          font('#{$file-name}.woff')                     format('woff'),
+         font('#{$file-name}.woff2')                    format('woff2'),
          font('#{$file-name}.ttf')                      format('truetype'),
          font('#{$file-name}.svg##{$font-family}')      format('svg');
   }
