--- a/objects/_centerer.scss
+++ b/objects/_centerer.scss
@@ -1,10 +1,5 @@
 .centered {
-	display: table;
-	width: 100%;
-	height: 100%;
-	&__inner {
-		display: table-cell;
-		text-align: center;
-		vertical-align: middle;
-	}
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
