--- a/objects/_media.scss
+++ b/objects/_media.scss
@@ -9,20 +9,20 @@
 	}
 	&__image {
 		float: left;
-		@include rem-space(margin-right, 1);
+		margin-right: rem-space(1);
 		img {
 			display: block;
 		}
 		.media--right & {
 			float: right;
-			@include rem-space(margin-left, 1);
+			margin-left: rem-space(1);
 			margin-right: 0;
 		}
 		.media--wide & {
-			@include rem-space(margin-right, 3);
+			margin-right: rem-space(3);
 		}
 		.media--wide.media--right & {
-			@include rem-space(margin-left, 3);
+			margin-left: rem-space(3);
 		}
 	}
 }
